fix bug with picture on safari

--- a/css/nos-produits.css
+++ b/css/nos-produits.css
@@ -67,6 +67,7 @@
 .picture-article{
     cursor: pointer;
     width: 25em;
+    height: 25em;
 }
 /* *** */
 
